Assets y creando estructura

--- a/index.html
+++ b/index.html
@@ -10,8 +10,42 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar"></nav>
-    <main class="main-section"></main>
-    <footer class="footer"></footer>
+    <nav>
+        <img src="./assets/img/Valhalla_logo_res.png" alt="">
+        <p>Valhalla Glamping</p>
+        <button class="profile">
+            <svg></svg>
+        </button>
+        <button  class="wishlist">
+            <svg></svg>
+        </button>
+        <button  class="cart">
+            <svg></svg>
+        </button>
+    </nav>
+    <main class="main-section">
+        <article>
+           <div class="Valhalla-section">
+            <h1>Valhalla Glaping</h1>
+            <p>Donde los aventureros encuentran su lugar en la naturaleza</p>
+            <button>Reserva Ya.</button>
+           </div>
+           <div class="image-section">
+            <img src="" alt="">
+           </div> 
+        </article>
+        <section class="product-section">
+            <div class="Paquetes-section"></div>
+            <div class="servicios-adicionales-section"></div>
+        </section>
+        <section class="info-section">
+           <div class="porque-nosotros"></div>
+           <div class="galeria-fotos"></div>
+           <div class="encuentranos"></div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
