Estructura del proyecto

--- a/index.html
+++ b/index.html
@@ -33,19 +33,52 @@
            <div class="image-section">
             <img src="" alt="">
            </div> 
+           <div>hola mi nombre</div>
         </article>
         <section class="product-section">
             <div class="Paquetes-section"></div>
             <div class="servicios-adicionales-section"></div>
         </section>
         <section class="info-section">
-           <div class="porque-nosotros"></div>
-           <div class="galeria-fotos"></div>
-           <div class="encuentranos"></div>
+            <div class="about-us">
+                <h2>¿Por qué nosotros?</h2>
+                <div class="earty">
+                    <img src="" alt="">
+                    <p></p>
+                </div>
+                </div>
+            </div>
+            <div class="gallery">
+                <h2>Galería de estilos</h2>
+            </div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+            <div class="location">
+                <h2>Encuéntranos</h2>
+                <div class="map">
+                    <img src="" alt="">
+                </div>
+                <p></p>
+            </div>
         </section>
     </main>
     <footer>
-
+        <h3>Eco-store</h3>
+        <p>Careers</p>
+        <p>Careers</p>
+        <p>Careers</p>
+        <div class="social-media">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
     </footer>
 </body>
 </html>
