Creando la estructura de la sección main

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
     </nav>
     <main class="main-section">
         <article>
-           <div class="Valhalla-section">
-            <h1>Valhalla Glaping</h1>
-            <p>Donde los aventureros encuentran su lugar en la naturaleza</p>
-            <button>Reserva Ya.</button>
-           </div>
-           <div class="image-section">
-            <img src="" alt="">
-           </div> 
-           <div>hola mi nombre</div>
+            <div class="Valhalla-section">
+                <h1>Valhalla Glamping</h1>
+                <p>¡Sumérgete en la aventura y descubre un mundo de tranquilidad en medio de la naturaleza!<br>En Valhalla Glamping, nuestra cabaña alpina es una puerta hacia la serenidad y el confort.<br>Despierta rodeado de montañas, respira aire fresco y vive una experiencia única.<br>¿Estás listo para crear recuerdos inolvidables?</p>
+                <button>¡Reserva Ahora!</button>
+            </div>
+            <div class="image-section">
+                <img src="./assets/img/Cabaña/Cabaña-luces.jpg" alt="">
+            </div>
         </article>
+        
         <section class="product-section">
             <div class="Paquetes-section"></div>
             <div class="servicios-adicionales-section"></div>
