Reolvinedo uno bug

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <nav>
         <img src="./assets/img/Valhalla_logo_res.png" alt="">
-        <p>Valhalla Glamping</p>
+        <div>
+            <p>Valhalla Glamping</p>
+        </div>
         <div class="icons">
             <button class="profile">
                 <svg width="36" height="36" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
